--- a/ansible-deploy.yml
+++ b/ansible-deploy.yml
@@ -1,24 +1,71 @@
 ---
- - name: deploying tomcat container
-   hosts: all
-   become: True
-   tasks:
-      - name: install git
-        apt:
-          name: git
-          state: present
-      - name: add user lakshmi
-        user:
-          name: lakshmi
-      - name: create a file
-        file:
-          name: 3acrs
-          state: directory  
-      - name: Start the container
-        docker_container:
-          name: my-app
-          image: "satishkollati/tomcat:${env.BUILD_ID}"
-          state: started
-          published_ports:
-           - 0.0.0.0:8080:8080       
+- hosts: all
+  become: true
+  vars:
+    default_container_name: my-app
+    default_container_image: satishkollati/tomcat:${env.BUILD_ID}
+
+
+  tasks:
+    - name: Install aptitude
+      apt:
+        name: aptitude
+        state: latest
+        update_cache: true
+
+    - name: Install required system packages
+      apt:
+        pkg:
+          - apt-transport-https
+          - ca-certificates
+          - curl
+          - software-properties-common
+          - python3-pip
+          - virtualenv
+          - python3-setuptools
+        state: latest
+        update_cache: true
+
+    - name: Add Docker GPG apt Key
+      apt_key:
+        url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+
+    - name: Add Docker Repository
+      apt_repository:
+        repo: deb https://download.docker.com/linux/ubuntu focal stable
+        state: present
+
+    - name: Update all packages to the latest version
+      apt:
+        upgrade: dist
+    - name: Update apt and install docker-ce
+      apt:
+        name: docker-ce
+        state: latest
+        update_cache: true
+
+    - name: Install Docker Module for Python
+      pip:
+        name: docker
+
+    - name: Pull default Docker image
+      community.docker.docker_image:
+        name: "{{ default_container_image }}"
+        source: pull
+
+    - name: Create default containers
+      community.docker.docker_container:
+        name: "{{ default_container_name }}"
+        image: "{{ default_container_image }}"
+        state: present
+    - name: Start the container
+      docker_container:
+        name: "{{default_container_name}}"
+        image: "{{default_container_image}}"
+        state: started
+        published_ports:
+          - 0.0.0.0:8080:8080
+
+   
      
