--- a/ansible-deploy.yml
+++ b/ansible-deploy.yml
@@ -14,6 +14,8 @@
 
     - name: Print complete log list
       command: git rev-parse --short HEAD
+      args:
+       chdir: /home/ubuntu/.git
       register: DOCKER_TAG
 
     - name: Install aptitude
